# macos-video-auto-ocr-ass

./: .gitignore  Makefile  README.md  merge_ass_subs.py  print_supported_languages.py  pyproject.toml  pytest.ini  translate_ass_llama.py  translate_ass_marianmt.py  video_ocr_to_ass.py  video_ocr_to_ass_objc.py  video_ocr_to_json  video_ocr_to_json.m  video_text_heatmap.py
electron_gui/: README.md  index.html  main.js  package-lock.json  package.json
macos_video_auto_ocr_ass/: __init__.py  ass_utils.py  config.py  constants.py  logger.py  ocr_api.py  translators.py  video_utils.py
tests/: README.md  conftest.py  run_tests.py  test_ass_utils.py  test_config.py  test_logger.py  test_ocr_api.py  test_translators.py  test_video_utils.py
