[tool.poetry]
name = "macos-video-auto-ocr-ass"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pysubs2 = "^1.8.0"
pyobjc = "^11.1"
pillow = "^11.2.1"
numpy = "^2.3.1"
tqdm = "^4.67.1"
opennmt-py = "^3.5.1"
ctranslate2 = "^4.6.0"
sentencepiece = "^0.2.0"
llama-cpp-python = "^0.3.9"
huggingface-hub = "^0.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
