[tool.poetry]
name = "macos-video-auto-ocr-ass"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pysubs2 = "1.8.0"
pyobjc = "11.1"
pillow = "11.2.1"
tqdm = "4.67.1"
ctranslate2 = "4.6.0"
sentencepiece = "0.2.0"
llama-cpp-python = "0.3.9"
huggingface-hub = "0.33.0"
opencc = "1.1.9"
transformers = "4.52.4"
torch = "^2.7.1"
torchvision = "^0.22.1"
torchaudio = "^2.7.1"
langdetect = "^1.0.9"
sacremoses = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
