[tool.poetry]
name = "macos-video-auto-ocr-ass"
version = "0.1.0"
description = ""
authors = ["relifeted <ted1215@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pysubs2 = "1.8.0"
pyobjc = "11.1"
pillow = "11.2.1"
tqdm = "4.67.1"
sentencepiece = "0.2.0"
llama-cpp-python = "0.3.9"
huggingface-hub = "0.33.0"
opencc = "1.1.9"
transformers = "4.52.4"
torch = "2.7.1"
torchvision = "0.22.1"
torchaudio = "2.7.1"
langdetect = "1.0.9"
sacremoses = "0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-cov = "4.1.0"
pytest-mock = "3.11.1"
pytest-xdist = "3.3.1"
black = "23.7.0"
isort = "5.12.0"
flake8 = "6.0.0"
mypy = "1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
    "--durations=10"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "macos: marks tests that require macOS",
    "vision: marks tests that require Vision framework"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["macos_video_auto_ocr_ass"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pysubs2.*",
    "objc.*",
    "AVFoundation.*",
    "Cocoa.*",
    "CoreMedia.*",
    "PIL.*",
    "Quartz.*",
    "Vision.*",
    "llama_cpp.*",
    "transformers.*",
    "torch.*",
    "torchvision.*",
    "torchaudio.*",
    "opencc.*",
    "langdetect.*",
    "sacremoses.*"
]
ignore_missing_imports = true
